[package]
name = "rustopus"
version = "0.1.0"
edition = "2021"
description = "High-performance API Gateway in Rust"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
# HTTP server/client
axum = { version = "0.7", features = ["json"] }
hyper = { version = "1.0", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
hyper-tls = "0.6"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
# Serialization
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
serde_yaml = "0.9"
# Configuration
config = "0.15.4"
notify = "6.1"
# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Error handling
thiserror = "1.0"
anyhow = "1.0"
# Async traits
async-trait = "0.1"
# HTTP types
http = "1.0"
# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.13"
# Concurrent data structures
dashmap = "6.1"
parking_lot = "0.12"
# Additional dependencies
once_cell = "1.19"
num_cpus = "1.16"
regex = "1.10"
bytes = "1.5.0"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"
